--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,22 @@
-name: Deploy to VM via Tailscale
+name: Deploy React App to G3 Server
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: self-hosted
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.VM_SSH_HOST }}
-          username: ${{ secrets.VM_SSH_USER }}
-          key: ${{ secrets.VM_SSH_KEY }}
-          script: |
-            rm -rf ~/projects/translation-cleaner/*
-            mkdir -p ~/projects/translation-cleaner
-            cd ~/projects/translation-cleaner
-            echo "${{ github.repository }}" > .git_origin
-            exit 0
-
-      - name: Copy project files to VM
-        uses: appleboy/scp-action@v0.1.5
-        with:
-          host: ${{ secrets.VM_SSH_HOST }}
-          username: ${{ secrets.VM_SSH_USER }}
-          key: ${{ secrets.VM_SSH_KEY }}
-          source: "."
-          target: "~/projects/translation-cleaner"
-
-      - name: Rebuild and restart Docker Compose app
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.VM_SSH_HOST }}
-          username: ${{ secrets.VM_SSH_USER }}
-          key: ${{ secrets.VM_SSH_KEY }}
-          script: |
-            cd ~/projects/translation-cleaner
-            docker compose down
-            docker compose up -d --build
+      - name: Rebuild Docker container
+        run: |
+          rm -rf ~/projects/translation-cleaner/*
+          mkdir -p ~/projects/translation-cleaner
+          cp -r . ~/projects/translation-cleaner
+          cd ~/projects/translation-cleaner
+          docker compose down
+          docker compose up -d --build
